# SWESphere

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  swesphere.py
.github/workflows/: ci.yml
app/: __init__.py  cli.py  email.py  errors.py  events.py  forms.py  logging_config.py  models.py  routes.py
app/api/: __init__.py  auth.py  notifications.py  posts.py  users.py
app/templates/: 404.html  500.html  _post.html  base.html  edit_profile.html  index.html  login.html  notifications.html  register.html  reset_password.html  reset_password_request.html  search.html  user.html
app/templates/email/: reset_password.html  reset_password.txt
app/translations/ar/LC_MESSAGES/: messages.po
app/translations/de/LC_MESSAGES/: messages.po
app/translations/es/LC_MESSAGES/: messages.po
app/translations/fr/LC_MESSAGES/: messages.po
app/translations/hi/LC_MESSAGES/: messages.po
app/translations/it/LC_MESSAGES/: messages.po
app/translations/ja/LC_MESSAGES/: messages.po
app/translations/ko/LC_MESSAGES/: messages.po
app/translations/pl/LC_MESSAGES/: messages.po
app/translations/pt/LC_MESSAGES/: messages.po
app/translations/ru/LC_MESSAGES/: messages.po
app/translations/zh/LC_MESSAGES/: messages.po
backend/: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: auth.py  comments.py  notifications.py  posts.py  users.py  ws.py
backend/app/core/: __init__.py  db_monitoring.py  events.py  pagination.py  redis_keys.py  security.py  websocket.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  blocked_word.py  comment.py  mixins.py  notification.py  post.py  user.py
backend/app/repositories/: __init__.py  base.py  post_repository.py  search_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  common.py  moderation.py  notification.py  post.py  user.py
backend/app/services/: __init__.py  auth_service.py  avatar_service.py  cache_invalidation.py  cache_service.py  exceptions.py  moderation_service.py  notification_service.py  post_service.py  realtime_service.py  recommendation_service.py  storage.py  user_service.py
backend/app/workers/: __init__.py  celery_app.py
backend/app/workers/tasks/: __init__.py  cleanup.py  cleanup_tasks.py  email.py  email_tasks.py  feed_tasks.py  notification_tasks.py  notifications.py  recommendation_tasks.py
backend/migrations/: README  env.py
backend/migrations/versions/: 001_initial.py  002_add_indexes.py
backend/tests/: conftest.py  test_auth.py  test_posts.py  test_users.py  test_websocket.py
backend/tests/test_api/: conftest.py  test_auth_routes.py  test_notification_routes.py  test_post_routes.py  test_user_routes.py
backend/tests/test_core/: __init__.py  test_db_monitoring.py  test_redis_keys_recommendation.py
backend/tests/test_repositories/: conftest.py  test_post_repository.py  test_post_repository_optimized.py  test_search_repository.py  test_user_repository.py
backend/tests/test_services/: conftest.py  test_auth_service.py  test_avatar_service.py  test_cache_invalidation.py  test_cache_service.py  test_caching_integration.py  test_moderation_service.py  test_notification_service.py  test_post_service.py  test_recommendation_integration.py  test_recommendation_service.py  test_user_service.py
backend/tests/test_workers/: __init__.py  test_recommendation_tasks.py
frontend/: .gitignore  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: index.ts
frontend/src/lib/api/: auth.ts  client.ts  index.ts  posts.ts  users.ts
frontend/src/lib/stores/: auth.ts  user.ts
frontend/src/lib/types/: index.ts  post.ts  user.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/(app)/: +layout.svelte
frontend/tests/: setup.ts
frontend/tests/components/notification/: NotificationBell.test.ts
frontend/tests/components/post/: PostCard.test.ts  PostComposer.test.ts
frontend/tests/components/ui/: Avatar.test.ts  Button.test.ts  Input.test.ts  Modal.test.ts
frontend/tests/components/user/: FollowButton.test.ts  ProfileHeader.test.ts  UserCard.test.ts
frontend/tests/e2e/: auth.spec.ts  explore.spec.ts  feed.spec.ts  fixtures.ts  global-setup.ts  navigation.spec.ts  notifications.spec.ts  profile.spec.ts
frontend/tests/mocks/: handlers.ts
frontend/tests/mocks/app/: environment.ts  navigation.ts  stores.ts
frontend/tests/unit/api/: auth.test.ts  client.test.ts  posts.test.ts  users.test.ts
frontend/tests/unit/stores/: auth.test.ts  user.test.ts
frontend/tests/unit/types/: post.test.ts  user.test.ts
migrations/versions/: 28794b0f8972_posts_table.py  54e59ba347a7_users_table.py  61e464b229eb_followers.py  add_new_features.py  d3592ac7023b_new_fields_in_user_model.py
swesphere_mobile/: README.md  analysis_options.yaml  pubspec.yaml
swesphere_mobile/lib/: app.dart  main.dart
swesphere_mobile/lib/core/: core.dart
swesphere_mobile/lib/core/constants/: app_constants.dart
swesphere_mobile/lib/core/di/: injection.dart
swesphere_mobile/lib/core/error/: failures.dart
swesphere_mobile/lib/core/extensions/: context_extensions.dart
swesphere_mobile/lib/core/network/: api_client.dart  api_interceptors.dart
swesphere_mobile/lib/core/router/: app_router.dart
swesphere_mobile/lib/core/theme/: app_colors.dart  app_theme.dart
swesphere_mobile/lib/shared/widgets/: avatar_widget.dart  button_widget.dart  empty_state.dart  error_view.dart  (+3 more)
swesphere_mobile/test/: README.md
swesphere_mobile/test/core/: constants_test.dart  failures_test.dart  theme_test.dart
swesphere_mobile/test/integration/: auth_flow_test.dart  feed_flow_test.dart  profile_flow_test.dart
tests/: conftest.py  test_forms.py  test_models.py  test_routes.py
(+93 files in other folders)
